# wdpe

./: Cargo.toml  README.md
.github/workflows/: build-test.yml  lint.yml  release.yml
docs/: element-registration-improvement-plan.md
src/: body.rs  client.rs  command.rs  element.rs  error.rs  event.rs  lib.rs  requests.rs  state.rs
src/client/: body.rs
src/command/: element.rs
src/command/element/: action.rs  complex.rs  layout.rs  selection.rs  system.rs  text.rs
src/element/: definition.rs  layout.rs  macros.rs  parser.rs  registry.rs  sub.rs  unknown.rs  utils.rs
src/element/action/: button.rs  link.rs
src/element/complex/: sap_table.rs
src/element/complex/sap_table/: body.rs  cell.rs  from_sap_table.rs  header.rs  row.rs
src/element/complex/sap_table/cell/: header_cell.rs  hierarchical_cell.rs  matrix_cell.rs  normal_cell.rs  selection_cell.rs
src/element/graphic/: image.rs
src/element/layout/: button_row.rs  form.rs  grid_layout.rs  popup_window.rs  scroll_container.rs  scrollbar.rs  tab_strip.rs  tray.rs
src/element/layout/grid_layout/: cell.rs
src/element/layout/tab_strip/: item.rs
src/element/selection/: check_box.rs  combo_box.rs  list_box.rs
src/element/selection/list_box/: item.rs
src/element/selection/list_box/item/: action_item.rs
src/element/sub/: definition.rs  macros.rs
src/element/system/: client_inspector.rs  custom.rs  loading_placeholder.rs
src/element/text/: caption.rs  input_field.rs  label.rs  text_view.rs
src/event/: event_queue.rs  test.rs
src/requests/: blocking.rs  reqwest.rs  ureq.rs
src/requests/blocking/: ureq.rs
tests/: derive_macros.rs
tests/ui/: fail_duplicate_element_ref.rs  fail_duplicate_element_ref.stderr  fail_lsevents_without_interactable.rs  fail_lsevents_without_interactable.stderr  fail_missing_element_ref.rs  fail_missing_element_ref.stderr  pass_lsdata.rs
wdpe-macros/: Cargo.toml
wdpe-macros/src/: element.rs  event.rs  lib.rs  lsdata.rs  subelement.rs  utils.rs
