[package]
name = "wdpe"
version = "0.1.1"
edition = "2024"
description = "WebDynpro Parse Engine"
keywords = ["webdynpro", "sap", "scraping", "parser"]
authors = ["Hyomin Koo <me@eatsteak.dev>"]
license = "MIT"
repository = "https://github.com/EATSTEAK/wdpe"
readme = "README.md"

[features]
default = ["element"]
element = ["dep:scraper"]
reqwest = ["dep:reqwest"]

[dependencies]
custom_debug_derive = "0.6.2"
derive_builder = "0.20.2"
html-escape = "0.2.13"
lol_html = "2.6.0"
regex-lite = "0.1.7"
reqwest = { version = "0.12.23", features = [
  "charset",
  "http2",
  "macos-system-configuration",
  "rustls-tls",
  "cookies",
  "gzip",
  "brotli",
], default-features = false, optional = true }
roxmltree = "0.20.0"
scraper = { version = "0.24.0", features = ["atomic"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.47.0", features = ["full"] }
