[package]
name = "wdpe"
version = "0.2.1"
edition = "2024"
description = "WebDynpro Parse Engine"
keywords = ["webdynpro", "sap", "scraping", "parser"]
authors = ["Hyomin Koo <me@eatsteak.dev>"]
license = "MIT"
repository = "https://github.com/EATSTEAK/wdpe"
readme = "README.md"

[features]
default = ["element"]
element = ["dep:scraper"]
reqwest = ["dep:reqwest"]
ureq = ["dep:ureq"]

[dependencies]
custom_debug_derive = "0.6"
derive_builder = "0.20"
html-escape = "0.2"
lol_html = "2.6.0"
regex-lite = "0.1.7"
reqwest = { version = "0.12", features = [
  "charset",
  "http2",
  "macos-system-configuration",
  "rustls-tls",
  "cookies",
  "gzip",
  "brotli",
], default-features = false, optional = true }
roxmltree = "0.20"
scraper = { version = "0.24", features = ["atomic"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
url = "2.5.7"
ureq = { version = "3.1.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1", features = ["full"] }
