[workspace]
members = [".", "wdpe-macros"]

[package]
name = "wdpe"
version = "0.4.1"
edition = "2024"
description = "WebDynpro Parse Engine"
keywords = ["webdynpro", "sap", "scraping", "parser"]
authors = ["Hyomin Koo <me@eatsteak.dev>"]
license = "MIT"
repository = "https://github.com/EATSTEAK/wdpe"
readme = "README.md"

[features]
default = ["element"]
element = ["dep:scraper", "dep:inventory", "dep:wdpe-macros"]
reqwest = ["dep:reqwest"]
ureq = ["dep:ureq"]

[dependencies]
inventory = { version = "0.3", optional = true }
wdpe-macros = { version = "=0.1.0", path = "wdpe-macros", optional = true }
custom_debug_derive = "0.6"
derive_builder = "0.20"
html-escape = "0.2"
lol_html = "2.7.1"
regex-lite = "0.1.9"
reqwest = { version = "0.13", features = [
  "charset",
  "http2",
  "rustls",
  "cookies",
  "gzip",
  "brotli",
  "form",
], default-features = false, optional = true }
roxmltree = "0.21"
scraper = { version = "0.25", features = ["atomic"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
url = "2.5.8"
ureq = { version = "3.2.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.5"
tokio = { version = "1", features = ["full"] }
trybuild = "1"
